docs: wrap links in span to avoid width 100%

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -142,3 +142,7 @@ ul.card-items li {
 .card.concepts {
     background-color: #f7fffd;
 }
+
+.card.operations {
+    background-color: #fffaf7;
+}
